# termwave

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
docs/: specs.md
src/: __init__.py  app.py  commands.py  config.py  main.py
src/db/: __init__.py  database.py
src/providers/: __init__.py  anthropic.py  base.py  eliza.py  mock.py  openai.py
src/ui/: __init__.py  components.py  styles.py
tests/: README.md  conftest.py  cover_main_block.py  run_as_script.py
tests/functional/: test_chat_ui.py  test_eliza_provider.py
tests/providers/: test_eliza.py
tests/unit/: test_chat_history_item.py  test_commands.py  test_database.py  test_event_handlers.py  test_main.py
